# uav-localization

./: .gitignore  README.md
src/ORB_SLAM3/: CMakeLists.txt
src/ORB_SLAM3/include/: LoopClosing.h
src/eskf_observer/: package.xml
src/eskf_observer/eskf_observer/: drone_keyboard_teleop.py  eskf_node.py  eskf_observer.cpp  eskf_observer.py  pose_aligner.py
src/ros2_orb_slam3/: CMakeLists.txt
src/ros2_orb_slam3/include/ros2_orb_slam3/: common.hpp
src/ros2_orb_slam3/launch/: mono.launch.py
src/ros2_orb_slam3/params/: sim.yaml
src/ros2_orb_slam3/src/: common.cpp  mono_node.cpp
src/skydio_x2_sim/: .gitignore  package.xml
src/skydio_x2_sim/config/: sensor_params.yaml
src/skydio_x2_sim/launch/: run_sim.launch.py  run_slam.launch.py
src/skydio_x2_sim/rviz/: drone_viz.rviz
src/skydio_x2_sim/skydio_x2_sim/: README.md  requirements.txt
src/skydio_x2_sim/skydio_x2_sim/controls/: quadcopter_camera.py  quadcopter_controller.py
src/skydio_x2_sim/skydio_x2_sim/docs/: quadcopter_measure_model.md  quadcopter_model.md
src/skydio_x2_sim/skydio_x2_sim/execution/: analyze_xml.py  benchmark.py  main.py
src/skydio_x2_sim/skydio_x2_sim/math_model/: aerodynamic.cpp  aerodynamic.py  drone_model.cpp  drone_model.py  model_pms.py  sensor_model.py
src/skydio_x2_sim/skydio_x2_sim/mjc_simulate/: mjc_headless.py  mjc_render.py  mjc_sim.py
src/skydio_x2_sim/skydio_x2_sim/mjcf/: my_x2.xml  scene.xml  x2.xml
src/skydio_x2_sim/skydio_x2_sim/scenario/: scenario_manual_control.py
