<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skydio_x2_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nguyenvietkhanh.hn@gmail.com">thundera</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>pybind11_vendor</build_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
